--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,10 +2,10 @@ spring:
     jpa:
         show-sql: true
         hibernate:
-            ddl-auto: update
+            ddl-auto: create
     datasource:
         platform: mariadb
-        url: jdbc:mariadb://localhost:3306/PersistenceTestDB2
+        url: jdbc:mariadb://localhost:3306/PersistenceTestDB
         username: root
         password: root
         driverClassName: org.mariadb.jdbc.Driver
